Daemonset.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-daemonset
  labels:
    app: proxy
spec:
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      name: nginx-pod
      labels:
        app: proxy
    spec:
      containers:
        - name: mynginx
          image: nginx
          ports:
            - containerPort: 80
              hostPort: 8080
