NodeAffinity2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      name: nginx-pod
      labels:
        app: proxy
    spec:
      containers:
        - name: mynginx
          image: nginx
      affinity:
          nodeAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
              nodeSelectorTerms:
               - matchExpressions:
                 - key: slave1
                   operator: In
                   values:
                     - intelliq1
