RequestsandLimits2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
  labels:
    app: webserver
spec:
  replicas: 3
  selector:
    matchLabels: 
     app: webserver
  template:
    metadata:
      name: httpd-pod
      labels:
        app: webserver
    spec:
      containers:
        - name: myhttpd
          image: httpd
          ports:
            - containerPort: 80
              hostPort: 9090
          resources:
            requests:
              cpu: "200m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"
