blue-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-nginx-deployment
  labels:
    app: proxy
    author: intelliq
spec:
  replicas: 3
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      name: nginx-pod
      labels:
        app: proxy
    spec:
      containers:
        - name: nginx
          image: nginx:1.26
