deployment4.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    type: db
spec:
  replicas: 3
  selector:
    matchLabels:
      type: db
  template:
    metadata:
      name: postgres-pod
      labels: 
        type: db
    spec:
      containers:
        - name: mydb
          image: postgres
