pod-definition1.yml
---

apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: proxy
    author: intelliq
spec:
  containers:
    - name: mynginx
      image: nginx
