pod-definition2.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: postgres-pod
  labels:
    type: db
    author: intelliq
spec:
  containers:
    - name: mydb
      image: postgres
