pod-definition3.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: jenkins-pod
  labels:
    type: ci-cd
    author: intelliq
spec:
  containers:
   - name: myjenkins
     image: jenkins/jenkins
     ports:
      - containerPort: 8080
        hostPort: 9090
...
