pod-definition4.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: tomcat-pod
  labels:
    app: appserver
    author: intelliq
spec:
  containers:
    - name: mytomcat
      image: tomee
      ports:
        - containerPort: 8080
          hostPort: 9090
