pod-definition6.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  labels:
    author: intelliq
spec:
  containers:
    - name: mydb
      image: mysql
