volumes4.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  labels:
    app: db
spec:
  containers:
    - name: mydb
      image: mysql
      volumeMounts:
            - name: mysql-volume
              mountPath: /var/lib/mysql
  volumes:
    - name: mysql-volume
      persistentVolumeClaim:
        claimName: my-pvc
