service3.yml
---
apiVersion: v1
kind: Service
metadata:
  name: clusterip-service
  labels:
    author: intelliq
spec:
  ports:
    - targetPort: 3306
      port: 3306
  selector:
    app: db
